# Vision

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
backend/config/: config.yml  voice_commands.yml
backend/config/prompts/: medical.yml  retail.yml
backend/src/: __init__.py  config.py  main.py  pipeline.py
backend/src/detection/: detector.py  state_tracker.py
backend/src/providers/: base.py  factory.py
backend/src/providers/llm/: azure_llm.py  google_llm.py  groq_llm.py  vllm_llm.py
backend/src/providers/stt/: funasr_stt.py  google_stt.py  sarvam_stt.py  sarvam_stt_streaming.py
backend/src/providers/tts/: elevenlabs_tts.py  sarvam_tts.py  sarvam_tts_streaming.py
backend/src/utils/: image.py  logging.py
backend/src/voice/: intent.py  vad.py
frontend/: app.json  package-lock.json  package.json  tsconfig.json
frontend/app/(tabs)/: _layout.tsx  detect.tsx  index.tsx  settings.tsx  voice.tsx
frontend/components/: hello-wave.tsx
frontend/components/ui/: icon-symbol.tsx
frontend/services/: api.ts  scanEvents.ts  voiceStream.ts
